--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,7 +64,7 @@ logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.show-sql=true
 
-logging.level.comptoirs=INFO
+logging.level.monprojet=INFO
 logging.level.monprojet=DEBUG
 logging.pattern.console=%clr(%-5p)  %cyan(%logger{15}) - %msg %n
 
